Implemented all api endpoints from Transactions entity
